--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "jest": "^29.6.1",
     "markdownlint-cli": "^0.35.0",
     "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "nyc": "^15.1.0"
   }
 }
